[devtools] Allow transparent base background color overrides.

BUG=689349

Review-Url: https://codereview.chromium.org/2704213002
Cr-Commit-Position: refs/heads/master@{#452008}

Former-commit-id: 6b9bfb533a084798aaccb0de0dc3575c377dbc34